--- a/charts/falco/values.yaml
+++ b/charts/falco/values.yaml
@@ -412,6 +412,7 @@ collectors:
     withSize: false
     # -- hooks specify the hooks that will be used to collect metadata from the container engine.
     # The available hooks are: create, start.
+    # Some fields might not be available in create hook, but we are guaranteed that it gets triggered before first process gets started.
     hooks: ["create"]
     # -- engines specify the container engines that will be used to collect metadata.
     # See https://github.com/falcosecurity/plugins/blob/main/plugins/container/README.md#configuration
@@ -557,7 +558,7 @@ falcoctl:
     # -- The image tag to pull.
     tag: "0.11.4"
   artifact:
-    # -- Runs "falcoctl artifact install" command as an init container. It is used to install artfacts before
+    # -- Runs "falcoctl artifact install" command as an init container. It is used to install artifacts before
     # Falco starts. It provides them to Falco by using an emptyDir volume.
     install:
       enabled: true
@@ -604,7 +605,7 @@ falcoctl:
     # -- Configuration used by the artifact commands.
     artifact:
       # -- List of artifact types that falcoctl will handle. If the configured refs resolves to an artifact whose type is not contained
-      # in the list it will refuse to downloade and install that artifact.
+      # in the list it will refuse to download and install that artifact.
       allowedTypes:
         - rulesfile
         - plugin
