Revert "fix: remove container plugin default ref to avoid redundant download of the bundled plugin"
This reverts commit 720860353ade9dae31e1cd088be816be5a836908.

Signed-off-by: cannarelladev <cannarella.dev@gmail.com>

--- a/charts/falco/values.yaml
+++ b/charts/falco/values.yaml
@@ -404,8 +404,7 @@ collectors:
     enabled: true
     # -- pluginRef is the OCI reference for the container plugin. It could be a full reference such as
     # "ghcr.io/falcosecurity/plugins/plugin/container:0.4.1". Or just name + tag: container:0.4.1.
-    # By default, the plugin bundled with Falco is used. Set this only if you need a different version.
-    pluginRef: 
+    pluginRef: "ghcr.io/falcosecurity/plugins/plugin/container:0.4.1"
     # -- labelMaxLen is the maximum length of the labels that can be used in the container plugin.
     # container labels larger than this value won't be collected.
     labelMaxLen: 100
