fix redis customConfig type
level=INFO msg="warning: cannot overwrite table with non table for falco.falcosidekick.webui.redis.customConfig (map[])"

Signed-off-by: Julien Francoz <julien-github@francoz.net>

--- a/charts/falcosidekick/values.yaml
+++ b/charts/falcosidekick/values.yaml
@@ -1349,7 +1349,7 @@ webui:
       pullPolicy: IfNotPresent
 
     # -- List of Custom config overrides for Redis
-    customConfig: {}
+    customConfig: []
       # - maxmemory-policy allkeys-lfu
       # - maxmemory 4096mb
 
