feat: Add support for sourcing customRules directly from files
Signed-off-by: Martin Akesson <2602099+c0rner@users.noreply.github.com>

--- a/charts/falco/templates/rules-configmap.yaml
+++ b/charts/falco/templates/rules-configmap.yaml
@@ -7,8 +7,17 @@ metadata:
   labels:
     {{- include "falco.labels" . | nindent 4 }}
 data:
+{{- if kindIs "map" .Values.customRules }}
 {{- range $file, $content :=  .Values.customRules }}
   {{ $file }}: |-
 {{ $content | indent 4}}
+{{- end }}
+{{- else if kindIs "slice" .Values.customRules }}
+{{- range .Values.customRules }}
+{{- range $path, $contents :=  $.Files.Glob . }}
+  {{ $path | base }}: |-
+{{ $contents | toString | indent 4 }}
+{{- end }}
+{{- end }}
 {{- end }}
 {{- end }}
