--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,14 +2,23 @@ name: Check Helm Docs
 
 on:
   pull_request:
+    branches:
+      - main
+
+permissions: {}
 
 jobs:
   readme:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          persist-credentials: false
 
       - name: Run Helm Docs and check the outcome
         run: |
