--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -1,24 +1,29 @@
 name: Links
 
 on:
-  push:
-    branches:
-      - main
-      - master
   pull_request:
+    branches:
+      - master
+
+permissions: {}
 
 jobs:
   linkChecker:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+
     steps:
       - name: Checkout
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - name: Link Checker
         uses: lycheeverse/lychee-action@a8c4c7cb88f0c7386610c35eb25108e448569cb0 #v2.7.0
         with:
           args: --no-progress './**/*.yml' './**/*.yaml' './**/*.md' './**/*.gotmpl' './**/*.tpl' './**/OWNERS' './**/LICENSE'
-          token: ${{ secrets.GITHUB_TOKE }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           fail: true
