--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -1,9 +1,9 @@
 name: Links
 
 on:
-  pull_request:
-    branches:
-      - master
+  workflow_dispatch:
+  schedule:
+    - cron: "00 18 * * *"
 
 permissions: {}
 
@@ -13,6 +13,7 @@ jobs:
 
     permissions:
       contents: read
+      issues: write
 
     steps:
       - name: Checkout
